@@ -21,6 +21,7 @@ spec:
         container('maven') {
           sh 'mkdir -p /home/jenkins/agent/workspace/.m2'
           sh 'export MAVEN_CONFIG=/home/jenkins/agent/workspace/.m2'
+          sh 'export MAVEN_OPTS="-Xmx4096m -Xms4096m -XX:MaxPermSize=1024m"'
           sh 'mvn -Duser.home=/home/jenkins/agent/workspace -P gradle clean compile'
         }
       }
